--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,10 @@
         "php" : ">=5.3.3"
     },
 
+    "require-dev" : {
+        "phpunit/phpunit": "4.1.*"
+    },
+
     "autoload" : {
         "psr-4" : {
             "DCarbone\\CollectionPlus\\" : "src/"
