--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_script:
   - composer install --no-interaction --dev --prefer-source
 
 script:
-  - ./vendor/bin/phpunit --bootstrap ./vendor/autoload.php tests
+  - ./vendor/bin/phpunit
