--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,14 +11,15 @@
         backupGlobals="false"
         syntaxCheck="true"
         >
+
     <testsuite name="CollectionPlus">
         <directory>./tests/CollectionPlus</directory>
-        <exclude>./tests/CollectionPlus/test-scripts</exclude>
+        <exclude>./tests/misc</exclude>
     </testsuite>
 
     <testsuite name="FixedCollectionPlus">
         <directory>./tests/FixedCollectionPlus</directory>
-        <exclude>./tests/FixedCollectionPlus/test-scripts</exclude>
+        <exclude>./tests/misc</exclude>
     </testsuite>
 
     <filter>
