--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     },
 
     "require-dev" : {
-        "phpunit/phpunit": "~4.1"
+        "phpunit/phpunit": "~4.1 <5.0.0"
     },
 
     "autoload" : {
