--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,7 @@ php:
   - 5.6
 
 before_script:
-  - composer self-update
-  - composer update --prefer-source
+  - composer self-update 1.0.0-alpha10
   - composer install --no-interaction --dev --prefer-source
 
 script:
