--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ php:
 
 before_script:
   - composer self-update 1.0.0-alpha10
-  - composer install --no-interaction --dev --prefer-source
+  - composer install --no-interaction --prefer-source
 
 script:
   - ./vendor/bin/phpunit
