--- a/.travis.yml
+++ b/.travis.yml
@@ -3,15 +3,15 @@ language: php
 sudo: false
 
 php:
-  - 5.3.3
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
+  - 7.0
+  - 7.1
+  - 7.2
 
 before_script:
-  - composer self-update 1.0.0-alpha10
-  - composer install --no-interaction --prefer-source
+  - composer install --no-interaction --no-suggest --optimize-autoloader
 
 script:
   - ./vendor/bin/phpunit
